--- a/Day15/style.css
+++ b/Day15/style.css
@@ -7,8 +7,8 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
-  background: #40514e;
-  color: #f5f5f5;
+  background: #c5e3f6;
+  color: #fcefee;
   height: 100vh;
   width: 100%;
 }
@@ -21,8 +21,10 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 400px;
+  max-width: 300px;
   margin: auto;
+  padding: 0 20px;
+  color: #2d6cdf;
 }
 
 form h2 {
@@ -32,8 +34,9 @@ form h2 {
 form label {
   display: flex;
   flex-direction: column;
-  width: 100%;
   margin-bottom: 10px;
+  width: 100%;
+  text-align: center;
 }
 
 form label input {
@@ -48,7 +51,7 @@ div.userProfile {
   background: #2f89fc;
   margin: auto;
   margin-top: 20px;
-  max-width: 300px;
+  max-width: 270px;
   border-radius: 5px;
   text-align: center;
   padding: 30px;
@@ -67,6 +70,7 @@ button {
   border-radius: 5px;
   border: 0;
   outline: none;
-  background: #30e3ca;
+  background: #2f89fc;
   cursor: pointer;
+  color: #fcefee;
 }
