--- a/Day16/style.css
+++ b/Day16/style.css
@@ -55,11 +55,12 @@ div.country {
   margin-top: 20px;
   max-width: 270px;
   border-radius: 5px;
-  padding: 30px;
+  padding: 20px;
 }
 
 .flag {
   text-align: center;
+  margin-bottom: 10px;
 }
 
 div.country img {
@@ -70,6 +71,10 @@ div.country img {
 }
 
 div.info p {
+  margin-bottom: 10px;
+}
+
+div.info p strong {
   margin-left: 10px;
 }
 
