--- a/Day18/src/App.css
+++ b/Day18/src/App.css
@@ -57,6 +57,15 @@ nav div {
   margin-left: auto;
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50px;
+  background: #3d5af1;
+  color: #fff;
+}
+
 form {
   margin-top: 5rem;
   margin-bottom: 5rem;
@@ -146,6 +155,16 @@ a {
   margin-top: 5rem;
 }
 
+button {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+
+button img {
+  width: 25px;
+  height: 25px;
+}
 
 @media screen and (max-width: 768px) {
   .image {
