--- a/Day18/src/App.css
+++ b/Day18/src/App.css
@@ -11,7 +11,6 @@ html {
   font-size: 62.5%;
 }
 
-
 .theme-light {
   --color-primary: #15171a;
   --color-primary-2: hsla(0, 2%, 24%, 0.87);
@@ -40,7 +39,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   height: 100vh;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 nav,
@@ -107,14 +106,16 @@ a {
   min-height: 300px;
   background: var(--color-background-2);
   margin-bottom: 2rem;
-  border-radius: .7rem;
-  box-shadow: 8px 14px 38px rgba(39, 44, 49, .06), 1px 3px 8px rgba(39, 44, 49, .03);
-  transition: all .5s ease;
+  border-radius: 0.7rem;
+  box-shadow: 8px 14px 38px rgba(39, 44, 49, 0.06),
+    1px 3px 8px rgba(39, 44, 49, 0.03);
+  transition: all 0.5s ease;
 }
 
 .article:hover {
-  box-shadow: 8px 28px 50px rgba(39, 44, 49, .07), 1px 6px 12px rgba(39, 44, 49, .04);
-  transition: all .4s ease;
+  box-shadow: 8px 28px 50px rgba(39, 44, 49, 0.07),
+    1px 6px 12px rgba(39, 44, 49, 0.04);
+  transition: all 0.4s ease;
   transform: translate3D(0, -1px, 0) scale(1.02);
 }
 
@@ -122,8 +123,8 @@ a {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-top-left-radius: .7rem;
-  border-bottom-left-radius: .7rem;
+  border-top-left-radius: 0.7rem;
+  border-bottom-left-radius: 0.7rem;
 }
 
 .image img {
@@ -169,8 +170,8 @@ a {
 @media screen and (max-width: 768px) {
   .image {
     flex: 0 0 300px;
-    border-top-left-radius: .7rem;
-    border-top-right-radius: .7rem;
+    border-top-left-radius: 0.7rem;
+    border-top-right-radius: 0.7rem;
     border-bottom-left-radius: 0;
   }
 
@@ -214,10 +215,13 @@ a {
 
   form label input {
     padding: 1.3rem;
-    width: 200px;
+    width: 100%;
+    margin-top: 1rem;
+    margin-left: 0;
   }
 
   form button.search {
+    margin-left: 0;
     width: 100px;
     padding: 1.1rem;
     font-size: 1.1em;
@@ -234,6 +238,7 @@ a {
 
   form label {
     font-size: 2rem;
+    padding: 1rem;
   }
 
   form button {
